renamed LinkInstance to RevitLinkInstance, added Revit Nodes Tests
renamed LinkInstance to RevitLinkInstance,
added Revit Nodes Tests for RevitLinkInstance and LinkElement methods

--- a/src/Config/CS.props
+++ b/src/Config/CS.props
@@ -10,6 +10,7 @@
 	<REVIT_VERSION>Revit_$(RevitVersionNumber)</REVIT_VERSION>
 	<OutputPath Condition=" '$(OutputPath)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)\$(REVIT_VERSION)</OutputPath>
     <PACKAGESPATH>$(SolutionDir)packages</PACKAGESPATH>
+    <DYNAMOCORERUNTIME>C:\Users\Daria\source\repos\Dynamo\bin\AnyCPU\Debug</DYNAMOCORERUNTIME>
 	<DynamoExternPath  Condition=" '$(DynamoExternPath)' == '' ">$(SolutionDir)..\extern</DynamoExternPath>
 	<DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">C:\Program Files\Dynamo 0.7</DYNAMOTESTAPI>
 	<TestOutputPath Condition=" '$(TestOutputPath)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)\$(REVIT_VERSION)</TestOutputPath>
