--- a/src/Config/dynamo-nuget.config
+++ b/src/Config/dynamo-nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="internal-art" value="https://art-bobcat.autodesk.com/artifactory/api/nuget/team-dynamo-nuget/" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
   </packageSources>
   <config>
