--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -1,267 +1,143 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ImportGroup Label="PropertySheets">
-    <Import Project="$(SolutionDir)Config/CS.props" />
-  </ImportGroup>
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9ADADC68-36A3-4A21-9B54-298154A88720}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RevitSystemTests</RootNamespace>
-    <AssemblyName>RevitSystemTests</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>$(TestOutputPath)</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>3</WarningLevel>
-    <NoWarn>618</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-		None
-	  </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>$(TestOutputPath)</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>3</WarningLevel>
-    <NoWarn>618</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="DynamoCoreWpf">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.WpfUILibrary\lib\net48\DynamoCoreWpf.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DynamoUtilities">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net48\DynamoUtilities.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Prism">
-      <HintPath>$(PACKAGESPATH)\Prism\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>$(PACKAGESPATH)\NUnit\lib\nunit.framework.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="ProtoGeometry">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.ZeroTouchLibrary\lib\net48\ProtoGeometry.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DynamoServices">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.DynamoServices\lib\netstandard2.0\DynamoServices.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPI">
-      <HintPath>$(REVITAPI)\RevitAPI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPIUI">
-      <HintPath>$(REVITAPI)\RevitAPIUI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitTestFrameworkTypes">
-      <HintPath>$(DynamoExternPath)\RevitTestFramework\RevitTestFrameworkTypes.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="SystemTestServices">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Tests\lib\net48\SystemTestServices.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="TestServices">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Tests\lib\net48\TestServices.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="$(SolutionDir)AssemblySharedInfoGenerator\AssemblySharedInfo.cs">
-      <Link>Properties\AssemblySharedInfo.cs</Link>
-    </Compile>
-    <Compile Include="AdaptiveComponentTests.cs" />
-    <Compile Include="AnalysisDisplayTests.cs" />
-    <Compile Include="AppearanceAssetElementTests.cs" />
-    <Compile Include="Application\FamilyDocumentTests.cs" />
-    <Compile Include="AreaTests.cs" />
-    <Compile Include="AsynchronousModeTests.cs" />
-    <Compile Include="CeilingTests.cs" />
-    <Compile Include="CeilingTypeTests.cs" />
-    <Compile Include="ElementTypeTests.cs" />
-    <Compile Include="ElementTests.cs" />
-    <Compile Include="FamilyInstanceTests.cs" />
-    <Compile Include="ElevationMarkerTests.cs" />
-    <Compile Include="FloorTypeTests.cs" />
-    <Compile Include="GlobalParameterTests.cs" />
-    <Compile Include="GroupTests.cs" />
-    <Compile Include="PathOfTravelTests.cs" />
-    <Compile Include="PerformanceAdviserTests.cs" />
-    <Compile Include="PerformanceForRevitTests.cs" />
-    <Compile Include="RoofTests.cs" />
-    <Compile Include="RoofTypeTests.cs" />
-    <Compile Include="ScheduleOnSheetTests.cs" />
-    <Compile Include="SerializationTests.cs" />
-    <Compile Include="SheetTests.cs" />
-    <Compile Include="ViewportTests.cs" />
-    <Compile Include="SpaceTests.cs" />
-    <Compile Include="WallTests.cs" />
-    <Compile Include="CurtainSystemTests.cs" />
-    <Compile Include="RoomTests.cs" />
-    <Compile Include="RevisionTests.cs" />
-    <Compile Include="LocationTests.cs" />
-    <Compile Include="FilterRuleTests.cs" />
-    <Compile Include="FilledRegionTests.cs" />
-    <Compile Include="DetailCurveTests.cs" />
-    <Compile Include="TextTests.cs" />
-    <Compile Include="TagTests.cs" />
-    <Compile Include="CooridnatesTests.cs" />
-    <Compile Include="DirectShapeTests.cs" />
-    <Compile Include="DisplayTests.cs" />
-    <Compile Include="GetFamilyParametersTests.cs" />
-    <Compile Include="DimensionTests.cs" />
-    <Compile Include="MaterialsManagerTests.cs" />
-    <Compile Include="RevitDropDownTests.cs" />
-    <Compile Include="RevitLibraryTests.cs" />
-    <Compile Include="ImportInstanceTests.cs" />
-    <Compile Include="RevitWatch3DViewModelTests.cs" />
-    <Compile Include="SiteLocationTests.cs" />
-    <Compile Include="RenderingAsAServiceTests.cs" />
-    <Compile Include="DividedCurveTests.cs" />
-    <Compile Include="DocumentTests.cs" />
-    <Compile Include="ElementBindingTests.cs" />
-    <Compile Include="MaterialTests.cs" />
-    <Compile Include="MigrationTest.cs" />
-    <Compile Include="ModelCurveTests.cs" />
-    <Compile Include="RayBounceTests.cs" />
-    <Compile Include="BugTests.cs" />
-    <Compile Include="CoreTests.cs" />
-    <Compile Include="CurveTests.cs" />
-    <Compile Include="FaceTests.cs" />
-    <Compile Include="LevelTests.cs" />
-    <Compile Include="DividedSurfaceTests.cs" />
-    <Compile Include="FamilyTests.cs" />
-    <Compile Include="IntersectionTests.cs" />
-    <Compile Include="LengthTests.cs" />
-    <Compile Include="ModelTextTests.cs" />
-    <Compile Include="ReferenceCurveTests.cs" />
-    <Compile Include="SelectionTests.cs" />
-    <Compile Include="StructuralFramingTests.cs" />
-    <Compile Include="SunSettingsTests.cs" />
-    <Compile Include="TopographyTests.cs" />
-    <Compile Include="TransformTest.cs" />
-    <Compile Include="WarningTests.cs" />
-    <Compile Include="WallTypeTests.cs" />
-    <Compile Include="WorkflowTest.cs" />
-    <Compile Include="XYZTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PythonTests.cs" />
-    <Compile Include="ReferencePointTests.cs" />
-    <Compile Include="RegressionTests.cs" />
-    <Compile Include="SampleTests.cs" />
-    <Compile Include="SolidTests.cs" />
-    <Compile Include="TestUtils.cs" />
-    <Compile Include="UVTests.cs" />
-    <Compile Include="ViewTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj">
-      <Project>{589f14d7-2937-479c-834a-d44197cb1930}</Project>
-      <Name>RevitTestServices</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <Reference Include="ProtoCore">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net48\ProtoCore.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="CoreNodeModels">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.DynamoCoreNodes\lib\net48\CoreNodeModels.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DynamoUnits">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.ZeroTouchLibrary\lib\net48\DynamoUnits.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <ProjectReference Include="$(SolutionDir)Libraries\RevitNodesUI\RevitNodesUI.csproj">
-      <Project>{75940acc-3708-4526-8d91-7e3365baf682}</Project>
-      <Name>RevitNodesUI</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="$(SolutionDir)Libraries\RevitNodes\RevitNodes.csproj">
-      <Project>{0bc2a611-bd0e-4fcc-a1de-81f14ed369b2}</Project>
-      <Name>RevitNodes</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="$(SolutionDir)DynamoRevit\DynamoRevit.csproj">
-      <Project>{FD56AE51-739E-4893-8DE4-925D60C7097C}</Project>
-      <Name>DynamoRevit</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <Reference Include="DynamoCore">
-      <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net48\DynamoCore.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj">
-      <Project>{e4701f9e-41ab-4044-8166-85d924feb632}</Project>
-      <Name>RevitServices</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\RevitNodesTests\RevitNodesTests.csproj">
-      <Project>{9e79dc8d-25b1-491f-b094-ea39de1bbc66}</Project>
-      <Name>RevitNodesTests</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="$(SolutionDir)..\test\Libraries\RevitTestServices\RevitTestServices.csproj">
-      <Project>{589f14d7-2937-479c-834a-d44197cb1930}</Project>
-      <Name>RevitTestServices</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="RevitTestConfiguration.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>RevitTestConfiguration.xml</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="RevitTestConfiguration.xml">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>RevitTestConfiguration.tt</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)transform_all.bat" "$(ProjectDir)" xml</PreBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(ProjectDir)RevitTestConfiguration.xml" "$(OutputPath)"</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<ImportGroup Label="PropertySheets">
+		<Import Project="$(SolutionDir)Config\CS_SDK.props" />
+	</ImportGroup>
+	<PropertyGroup>
+		<ProductVersion>8.0.30703</ProductVersion>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<OutputPath>$(TestOutputPath)</OutputPath>
+		<WarningLevel>3</WarningLevel>
+		<NoWarn>618</NoWarn>
+		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+		<DebugSymbols>true</DebugSymbols>
+		<DebugType>full</DebugType>
+		<Optimize>false</Optimize>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>3</WarningLevel>
+		<NoWarn>618</NoWarn>
+		<Prefer32Bit>false</Prefer32Bit>
+	</PropertyGroup>
+	<PropertyGroup>
+		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+			None
+		</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<DebugType>none</DebugType>
+		<Optimize>true</Optimize>
+		<DefineConstants>TRACE</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>3</WarningLevel>
+		<NoWarn>618</NoWarn>
+		<Prefer32Bit>false</Prefer32Bit>
+	</PropertyGroup>
+	<Target Name="BeforeBuild" BeforeTargets="PreBuildEvent">
+		<Exec Command="&quot;$(SolutionDir)transform_all.bat&quot; &quot;$(ProjectDir)&quot; xml" />
+	</Target>
+	<Target Name="AfterBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y &quot;$(ProjectDir)RevitTestConfiguration.xml&quot; &quot;$(OutputPath)&quot;" />
+	</Target>
+	<ItemGroup>
+		<Reference Include="DynamoCoreWpf">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.WpfUILibrary\lib\net6.0\DynamoCoreWpf.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\DynamoCoreWpf.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="DynamoUtilities">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net6.0\DynamoUtilities.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\DynamoUtilities.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="Microsoft.Practices.Prism">
+			<HintPath>$(PACKAGESPATH)\Prism\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="nunit.framework">
+			<HintPath>$(PACKAGESPATH)\NUnit\lib\nunit.framework.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="ProtoGeometry">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.ZeroTouchLibrary\lib\net6.0\ProtoGeometry.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\ProtoGeometry.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="DynamoServices">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.DynamoServices\lib\netstandard2.0\DynamoServices.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\DynamoServices.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="RevitAPI">
+			<HintPath>$(REVITAPI)\RevitAPI.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="RevitAPIUI">
+			<HintPath>$(REVITAPI)\RevitAPIUI.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="RevitTestFrameworkTypes">
+			<HintPath>$(DynamoExternPath)\RevitTestFramework\RevitTestFrameworkTypes.dll</HintPath>
+		</Reference>
+		<Reference Include="SystemTestServices">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.Tests\lib\net6.0\SystemTestServices.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\SystemTestServices.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="TestServices">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.Tests\lib\net6.0\TestServices.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\TestServices.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Include="$(SolutionDir)AssemblySharedInfoGenerator\AssemblySharedInfo.cs" Link="Properties\AssemblySharedInfo.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RevitTestServices\RevitTestServices.csproj" />
+		<Reference Include="ProtoCore">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net6.0\ProtoCore.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\ProtoCore.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="CoreNodeModels">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.DynamoCoreNodes\lib\net6.0\CoreNodeModels.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\nodes\CoreNodeModels.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="DynamoUnits">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.ZeroTouchLibrary\lib\net6.0\DynamoUnits.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\DynamoUnits.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<ProjectReference Include="$(SolutionDir)Libraries\RevitNodesUI\RevitNodesUI.csproj" />
+		<ProjectReference Include="$(SolutionDir)Libraries\RevitNodes\RevitNodes.csproj" />
+		<ProjectReference Include="$(SolutionDir)DynamoRevit\DynamoRevit.csproj" />
+		<Reference Include="DynamoCore">
+			<HintPath Condition="!Exists('$(DYNAMOBUILDPATH)')">$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net6.0\DynamoCore.dll</HintPath>
+			<HintPath Condition=" Exists('$(DYNAMOBUILDPATH)')">$(DYNAMOBUILDPATH)\DynamoCore.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<ProjectReference Include="$(SolutionDir)Libraries\RevitServices\RevitServices.csproj" />
+		<ProjectReference Include="..\RevitNodesTests\RevitNodesTests.csproj" />
+		<ProjectReference Include="$(SolutionDir)..\test\Libraries\RevitTestServices\RevitTestServices.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="RevitTestConfiguration.tt">
+			<Generator>TextTemplatingFileGenerator</Generator>
+			<LastGenOutput>RevitTestConfiguration.xml</LastGenOutput>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="RevitTestConfiguration.xml">
+			<AutoGen>True</AutoGen>
+			<DesignTime>True</DesignTime>
+			<DependentUpon>RevitTestConfiguration.tt</DependentUpon>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Remove="SystemTest.cs" />
+	</ItemGroup>
 </Project>
