* update Dynamo Core build * small tweaks in preparation for build

--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -44,6 +44,11 @@
 		<DefineConstants>TRACE</DefineConstants>
 	</PropertyGroup>
 	<PropertyGroup Condition="$(Platform.Contains('NET'))">
-		<DefineConstants>NET</DefineConstants>
+		<DefineConstants>$(DefineConstants);NET</DefineConstants>
+		<IsNETFramework>false</IsNETFramework>
+	</PropertyGroup>
+	<PropertyGroup Condition="!$(Platform.Contains('NET'))">
+		<IsNETFramework>true</IsNETFramework>
+		<DefineConstants>$(DefineConstants);NETFRAMEWORK</DefineConstants>
 	</PropertyGroup>
 </Project>
