--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -32,7 +32,7 @@
 		<GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(ProjectDir)DSRevitNodesUIImages.resx" OutputResources="$(ProjectDir)DSRevitNodesUIImages.resources" References="$(FrameworkAssembliesPath)System.Drawing.dll" />
 		<AL TargetType="library" EmbedResources="$(ProjectDir)DSRevitNodesUIImages.resources" FileVersion="2.17.0" ProductName="Dynamo For Revit Preview Release" ProductVersion="2.17.0" Copyright="Copyright © Autodesk, Inc 2017-2018" OutputAssembly="$(OutputPath)DSRevitNodesUI.customization.dll" />
 	</Target>
-	<Target Name="AfterBuildMigrated">
+	<Target Name="AfterBuildMigrated" AfterTargets="PostBuildEvent">
 		<ItemGroup>
 			<DeleteFiles Include="$(TargetDir)$(ProjectName).*" />
 		</ItemGroup>
