--- a/src/Legacy/DynamoRevitVersionSelector/DynamoRevitVersionSelector.csproj
+++ b/src/Legacy/DynamoRevitVersionSelector/DynamoRevitVersionSelector.csproj
@@ -9,6 +9,7 @@
 	  <Prefer32Bit>false</Prefer32Bit>
 	  <ErrorReport>prompt</ErrorReport>
 	  <WarningLevel>4</WarningLevel>
+	  <OutputPath>$(OutputPath)\..</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
 	  <DebugSymbols>true</DebugSymbols>
