added the tests file, with renamed class
added the tests file that was previously excluded. the tests file reflects the reverted LinkInstance name change

--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Elements\FilterTests.cs" />
     <Compile Include="Elements\GroupTests.cs" />
     <Compile Include="Elements\PathOfTravelTests.cs" />
+    <Compile Include="Elements\RevitLinkTests.cs" />
     <Compile Include="Elements\RoofTests.cs" />
     <Compile Include="Elements\FloorTests.cs" />
     <Compile Include="Elements\CoordinatesTests.cs" />
