--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -4,11 +4,16 @@
       <RevitVersionNumber Condition=" '$(RevitVersionNumber)' == '' ">Preview Release</RevitVersionNumber>
       <REVIT_VERSION>Revit</REVIT_VERSION>
       <DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)</DYNAMOTESTAPI>
+	   <!-- local env -->
       <OutputPath Condition=" '$(OutputPath)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)\$(REVIT_VERSION)</OutputPath>
       <TestOutputPath Condition=" '$(TestOutputPath)' == '' ">$(OutputPath)</TestOutputPath>
-	   <DYNAMOBUILDPATH>D:\src\github\Dynamo\bin\AnyCPU\Debug</DYNAMOBUILDPATH>
    </PropertyGroup>
 	<PropertyGroup Condition="$(Platform.Contains('NET'))">
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">E:\RevitVersion\2025\Releasex64_NET7_20230907\Releasex64</REVITAPI>
+      <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\revit\Debugx64</REVITAPI>
+	</PropertyGroup>
+	<PropertyGroup Condition="!$(Platform.Contains('NET'))">
+		<!-- local env -->
+		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\revit.release.branch\Debugx64</REVITAPI>
 	</PropertyGroup>
 </Project>
